# OT-NLP

./: .env.example  .mcp.json  AGENTS.md  README.md  check-env.ps1  docker-compose.yml  psalms_nlp_highlevel_plan.md  pyproject.toml  stage_01_data_acquisition.md  stage_02_morphology_fingerprinting.md  stage_05_llm_suggestions.md  stage_08_corpus_expansion.md
.claude/: CLAUDE.md
docs/: stage_00_foundation.md  stage_03_breath_phonetic.md  stage_04_translation_scoring.md  stage_06_visualization_reporting.md  stage_07_orchestration.md
pipeline/: Dockerfile.pipeline  config.yml  init_flags.sql  init_schema.sql  run.py  validate_data.py  validate_infrastructure.py
pipeline/adapters/: __init__.py  db_adapter.py  llm_adapter.py  phoneme_adapter.py  translation_adapter.py
pipeline/docs/: analysis.ipynb  analysis_executed.ipynb  conf.py  index.md  references.bib  report.typ
pipeline/modules/: __init__.py  (+10 more)
scripts/: check-env.sh  download_data.ps1  download_data.sh
streamlit/: Dockerfile.streamlit  app.py  pyproject.toml  requirements_streamlit.txt
tests/: conftest.py  test_breath.py  test_chiasm.py  test_config.py  test_db_adapter.py  test_docker_compose.py  test_dockerfile.py  test_export.py  test_fingerprint.py  test_genre_baseline.py  test_ingest.py  test_ingest_translations.py  test_llm_adapter.py  test_package_structure.py  test_phoneme_adapter.py  test_run.py  test_scaffold.py  test_schema_sql.py  test_score.py  test_streamlit_placeholder.py  test_streamlit_queries.py  test_suggest.py  test_translation_adapters.py  test_validate_data.py  test_visualize.py
(+50 files in other folders)
